--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
     <form id="location">
         <label for="locationInput">Location:</label>
         <input type="text" id="locationInput" placeholder="Enter location" />
-        <button type="submit">Submit</button>
+        
     </form>
 </header>
+
+<div id="heading"></div>
+
 <div id="days">
-    
+
 </div>
     <div id="weather">
 
